deps/v8/test/message/fail/arrow-param-after-rest-2.out
*%(basename)s:7: SyntaxError: Rest parameter must be last formal parameter
(w, ...x, y) => 10
       ^
SyntaxError: Rest parameter must be last formal parameter
